--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 	grid-gap: 10px;
 	margin: 0 auto;
 	grid-template-columns: repeat(5, minmax(150px, 1fr));
-	grid-auto-rows: minmax(150px, auto);
+	grid-auto-rows: minmax(15vh, auto);
 
 }
 
@@ -34,10 +34,6 @@
 
 .item:hover, .category:hover{
 	transform:scale(1.25);
-	border: 2px solid #380097;
-}
-
-.item:focus, .category:focus{
 	background-color: #5d00ff;
 	border: 2px solid #380097;
 }
@@ -55,4 +51,12 @@ header, footer{
 	border-radius: 5px;
 
 	grid-column: 1/-1;
+}
+
+span.text_hidden{
+	display: none;
+}
+
+span.price_hidden{
+	display:none;
 }
